2. Local-Variable Type Inference [#70626]